# courseRepo

./: README.md  README.md~  push.sh  push.sh~
1_Introduction/: CMakeLists.txt  CMakeLists.txt~  README.MD  README.MD~  manifest.xml  manifest.xml~  run.sh  run.sh~
1_Introduction/src/: demo.cpp~  example.cpp  example.cpp~  ros_rgbd.cc  ros_rgbd.cc~
2_class/: README.MD~
2_class/eigen_example/: CMakeLists.txt  CMakeLists.txt~
2_class/eigen_example/src/: mainEigen.cpp  mainEigen.cpp~
2_class/sophus_example/sophus_demo/: CMakeLists.txt  CMakeLists.txt~
2_class/sophus_example/sophus_demo/src/: mainSophus.cpp
3_class/: README.MD  README.MD~
3_class/mono-slam/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  manifest.xml  manifest.xml~  run.sh  run.sh~
3_class/mono-slam/conf/: conf.cfg  conf_firewire.cfg  conf_kinect.cfg  confing.cfg
3_class/mono-slam/src/: ConfigVSLAM.cpp  ConfigVSLAM.h  FeatureModel.cpp  FeatureModel.h  FeaturesState.cpp  FeaturesState.h  Patch.cpp  Patch.hpp  Patches.hpp  RosVSLAMRansac.cpp  RosVSLAMRansac.hpp  camModel.cpp  camModel.hpp  camOCV.cpp  camOCV.hpp  cameraModel.cpp  cameraModel.hpp  libblur.cpp  libblur.h  monoslam_ransac.cpp  utils.cpp  utils.hpp  vslamRansac.cpp  vslamRansac.hpp  vslamRansac_OLD.cpp
9_class/ORB_SLAM2/: CMakeLists.txt  CMakeLists.txt~  ORBSLAM_Launch.launch  ORBSLAM_Launch.launch~
9_class/ORB_SLAM2/Examples/ROS/ORB_SLAM/: CMakeLists.txt  manifest.xml
9_class/ORB_SLAM2/Examples/ROS/ORB_SLAM/src/: ros_rgbd.cc  ros_rgbd.cc~
9_class/ORB_SLAM2/Setting/: SETTING.yaml
9_class/ORB_SLAM2/include/: System.h  System.h~  Tracking.h  Tracking.h~
9_class/ORB_SLAM2/src/: System.cc  System.cc~  Tracking.cc  Tracking.cc~
9_class/arcodelocal/: CMakeLists.txt  README.md  README.md~
9_class/arcodelocal/data/: geniusF100.ini  geniusF100.ini~  pointGrey.ini
9_class/arcodelocal/include/: aruco_mapping.h  aruco_mapping.h~  backaruco_mapping.hdd  cameraparameters.h~  chromaticmask.h  exports.h
9_class/arcodelocal/launch/: aruco_mapping.launch  aruco_mapping.launch~
9_class/arcodelocal/src/: aruco_mapping.cpp  aruco_mapping.cpp~  arucofidmarkers.cpp  arucofidmarkers.cpp~  backaruco_mapping.cppH  board.cpp  board.cpp~  boarddetector.cpp~  cameraparameters.cpp  cameraparameters.cpp~  chromaticmask.cpp  chromaticmask.cpp~  cvdrawingutils.cpp  cvdrawingutils.cpp~  highlyreliablemarkers.cpp  highlyreliablemarkers.cpp~  main.cpp  marker.cpp  marker.cpp~  markerdetector.cpp  markerdetector.cpp~  subpixelcorner.cpp  subpixelcorner.cpp~
